[package]
name = "unicorn-engine"
version = "2.0.2"
authors = ["Ziqiao Kong", "Lukas Seidel"]
documentation = "https://github.com/unicorn-engine/unicorn/wiki"
edition = "2021"
license = "GPL-2.0"
readme = "README.md"
repository = "https://github.com/unicorn-engine/unicorn"
description = "Rust bindings for the Unicorn emulator with utility functions"
build = "bindings/rust/build.rs"
links = "unicorn"
# use `cargo publish --list` to see files to be included
# the resulting list what cargo uses to check for out-of-date files during build
exclude = [
    "/docs",
    "/bindings/dotnet",
    "/bindings/go",
    "/bindings/haskell",
    "/bindings/java",
    "/bindings/pascal",
    "/bindings/python",
    "/bindings/ruby",
    "/bindings/vb6",
    "/bindings/zig",
    "/samples",
    "/tests",
]

[lib]
path = "bindings/rust/src/lib.rs"

[dependencies]
bitflags = "2.3.3"
libc = "0.2"

[build-dependencies]
cc = { version = "1.0" }
cmake = { version = "0.1" }
pkg-config = { version = "0.3" }

[features]
default = ["arch_all"]
dynamic_linkage = []
arch_all = ["arch_x86", "arch_arm", "arch_aarch64", "arch_riscv", "arch_mips", "arch_sparc", "arch_m68k", "arch_ppc", "arch_s390x", "arch_tricore"]
arch_x86 = []
arch_arm = []
arch_aarch64 = []
arch_riscv = []
arch_mips = []
arch_sparc = []
arch_m68k = []
arch_ppc = []
arch_s390x = []
arch_tricore = []
