[build-system]
requires = ["setuptools>=64", "build", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "unicorn"
dynamic = ["version"]
requires-python = ">= 2.7, != 3.0.*, != 3.1.*, != 3.2.*, != 3.3.*, != 3.4.*, != 3.5.*, != 3.6.*"
dependencies = [
    "importlib_resources; python_version < '3.9'"
]
authors = [
    { name = "Nguyen Anh Quynh", email = "quynh@gmail.com" },
]
description = "Unicorn CPU emulator engine"
readme = "README.md"
keywords = ["emulation", "qemu", "unicorn"]
license = { text = "BSD License" }
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]

[project.urls]
Homepage = "http://www.unicorn-engine.org"
Repository = "https://github.com/unicorn-engine/unicorn"
"Bug Tracker" = "https://github.com/unicorn-engine/unicorn/issues"
Changelog = "https://github.com/unicorn-engine/unicorn/blob/master/ChangeLog"

[project.optional-dependencies]
test = [
    "capstone==6.0.0a2;python_version>'3.7'",
    "capstone==5.0.1;python_version<='3.7'"
]

[tool.setuptools.packages.find]
include = ["unicorn*"]

[tool.setuptools_scm]
root = '../../'
