[package]
name = "unicorn-engine"
version = "2.0.0-rc3"
authors = ["Ziqiao Kong", "Lukas Seidel"]
documentation = ""
edition = "2018"
include = [
    "/.gitmodules",
    "/COPYING",
    "/Cargo.toml",
    "/README.md",
    "/src/*",
    "build.rs"
]
license = "GPL-2.0"
readme = "README.md"
repository = "https://github.com/unicorn-engine/unicorn/"
description = "Rust bindings for the Unicorn emulator with utility functions"
build = "build.rs"
links = "unicorn"

[dependencies]
bitflags = "1.3"
libc = "0.2"

[build-dependencies]
build-helper = "0.1"
