[package]
name = "unicorn-engine"
version = "2.0.0-rc5.post1"
authors = ["Ziqiao Kong", "Lukas Seidel"]
documentation = "https://github.com/unicorn-engine/unicorn/wiki"
edition = "2021"
include = [
    "/.gitmodules",
    "/COPYING",
    "/Cargo.toml",
    "/README.md",
    "/src/*",
    "build.rs",
]
license = "GPL-2.0"
readme = "README.md"
repository = "https://github.com/unicorn-engine/unicorn/"
description = "Rust bindings for the Unicorn emulator with utility functions"
build = "build.rs"
links = "unicorn"

[dependencies]
bitflags = "1.3"
libc = "0.2"

[build-dependencies]
build-helper = "0.1"
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0.22"
tar = "0.4.37"
bytes = "1.1.0"
