[package]
name = "unicorn-engine"
version = "2.0.0-rc6"
authors = ["Ziqiao Kong", "Lukas Seidel"]
documentation = "https://github.com/unicorn-engine/unicorn/wiki"
edition = "2021"
include = [
    "/.gitmodules",
    "/COPYING",
    "/Cargo.toml",
    "/README.md",
    "/src/*",
    "build.rs",
]
license = "GPL-2.0"
readme = "README.md"
repository = "https://github.com/unicorn-engine/unicorn/"
description = "Rust bindings for the Unicorn emulator with utility functions"
build = "build.rs"
links = "unicorn"

[dependencies]
bitflags = "1.3"
libc = "0.2"

[build-dependencies]
reqwest = { optional = true, version = "0.11", features = ["blocking"] }
flate2 = { optional = true, version = "1.0" }
tar = { optional = true, version = "0.4" }
bytes = { optional = true, version = "1" }
pkg-config = { optional = true, version = "0.3" }

[features]
default = ["build_unicorn_cmake"]

use_system_unicorn = ["pkg-config"]
build_unicorn_cmake = ["reqwest", "flate2", "tar", "bytes"]
